--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -4,17 +4,17 @@ spring.application.name=GroceryBazar
 server.port=5454
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/CdacProject
+spring.datasource.url=jdbc:mysql://localhost:3306/database
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=shreyasbarmade2002@gmail.com
-spring.mail.password=qxvm imaz gulj kqtu
+spring.mail.username=
+spring.mail.password=
 
 
 spring.mail.properties.mail.smtp.auth=ture
@@ -22,5 +22,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 
-razorpay.api.key=rzp_test_zEGTKxLZdTCb0p
-razorpay.api.secret=pO8UmInZoDuAKtYlAdsjgKmV
+razorpay.api.key=
+razorpay.api.secret=
